fix: various mistakes mentioned by copilot

--- a/html/help.html
+++ b/html/help.html
@@ -67,7 +67,7 @@
                 </section>
             </nav>
         </header>
-        <main class="contact-main help-responsiv">
+        <main class="contact-main help-responsive">
             <section id="contactsMainElement" class="contact-display help-content">
                 <div class="help-header">
                     <h1>Help</h1>
@@ -150,14 +150,14 @@
                             action is irreversible.
                         </span>
                     </li>
-                    <p> Remember that using <a href="#">Join</a> effectively requires consistent updates from you and
+                </ol>
+                <p> Remember that using <a href="#">Join</a> effectively requires consistent updates from you and
                         your team to
                         ensure the board reflects the current state of your project.
-                        Have more questions about <a href="#">Join</a>? Feel free to contact us at [Your Contact Email].
+                        Have more questions about <a href="#">Join</a>? Feel free to contact us at fabianpuchta@hotmail.de.
                         We're here to help
                         you!
                     </p>
-                </ol>
                 <h2 class="margin-top">Enjoy using Join!</h2>
             </section>
         </main>
