--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -70,7 +70,7 @@
                 </section>
             </nav>
         </header>
-        <main class="contact-main help-responsiv">
+        <main class="contact-main help-responsive">
             <section id="contactsMainElement" class="contact-display help-content">
                 <div class="help-header">
                     <h1>Legal Notice</h1>
@@ -158,7 +158,7 @@
                     claim, demand, loss, damage, cost, or liability (including reasonable legal fees) arising out of
                     or
                     relating to your use of <a href="#">Join</a> and/or your breach of this Legal Notice. <br>
-                    For any questions or notices, please contact us at [Contact Email]. <br>
+                    For any questions or notices, please contact us at fabianpuchta@hotmail.de. <br>
                     Date: July 26, 2023
                 </p>
             </section>
