--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -68,7 +68,7 @@
                 </section>
             </nav>
         </header>
-        <main class="contact-main help-responsiv">
+        <main class="contact-main help-responsive">
             <section id="contactsMainElement" class="contact-display help-content">
                 <div class="help-header">
                     <h1>Privacy Policy</h1>
@@ -132,7 +132,7 @@
                     unserer Webseite als Auftragsverarbeiter tätig werden.</p>
                 <h4>Speicherdauer</h4>
                 <p>Daten werden in Server-Log-Dateien in einer Form, die die Identifizierung der betroffenen
-                    Personen ermöglicht, maximal für [Bitte Informationen ergänzen] gespeichert; es sei denn,
+                    Personen ermöglicht, maximal für Zwei Monate gespeichert; es sei denn,
                     dass ein sicherheitsrelevantes Ereignis auftritt (z.B. ein DDoS-Angriff).</p>
                 <p>Im Falle eines solchen Ereignisses werden Server-Log-Dateien bis zur Beseitigung und
                     vollständigen Aufklärung des sicherheitsrelevanten Ereignisses gespeichert.</p>
@@ -163,7 +163,7 @@
                 <p>Empfänger der Daten sind ggf. technische Dienstleister, die für den Betrieb und die Wartung
                     unserer Webseite als Auftragsverarbeiter tätig werden.</p>
                 <h4>Speicherdauer</h4>
-                <p>Daten werden spätestens [Bitte Informationen ergänzen] nach Bearbeitung der Kontaktaufnahme
+                <p>Daten werden spätestens Zwei Wochen nach Bearbeitung der Kontaktaufnahme
                     gelöscht.</p>
                 <p>Sofern es zu einem Vertragsverhältnis kommt, unterliegen wir den gesetzlichen
                     Aufbewahrungsfristen. Diese betragen grundsätzlich 6 oder 10 Jahre aus Gründen der
