changed header.js and css to mainframe

--- a/html/summary.html
+++ b/html/summary.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style/standard.css">
     <link rel="stylesheet" href="../style/summary.css">
     <link rel="stylesheet" href="../style/mainframe.css">
-    <link rel="stylesheet" href="../style/header.css">
+    <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 </head>
 
@@ -157,7 +157,7 @@
 
     <!-- neu: firebase vor summary laden -->
     <script src="../scripts/firebase.js" defer></script>
-    <script src="../scripts/header.js" defer></script>
+    <script src="../scripts/mainframe.js" defer></script>
     <script src="../scripts/summary.js" defer></script>
 </body>
 
