--- a/html/contacts.html
+++ b/html/contacts.html
@@ -62,13 +62,25 @@
             <nav class="header-nav">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a href="#">
-                        <img src="../assets/icons/header/help.svg" alt="help icon">
-                    </a>
-                    <a href="#">
-                        <img src="../assets/icons/header/user_placeholder.svg" alt="user icon">
-                    </a>
-                </section>
+    <a href="#">
+        <img src="../assets/icons/header/help.svg" alt="help icon">
+    </a>
+    <button type="button" class="avatar-wrapper" id="avatar-button">
+        <div id="header-avatar" class="header-avatar"></div>
+    </button>
+
+    <div id="avatar-menu" class="avatar-menu hidden">
+        <button type="button" class="avatar-menu-item" id="menu-legal">
+            Legal Notice
+        </button>
+        <button type="button" class="avatar-menu-item" id="menu-privacy">
+            Privacy Policy
+        </button>
+        <button type="button" class="avatar-menu-item" id="menu-logout">
+            Log out
+        </button>
+    </div>
+</section>
             </nav>
         </header>
         <main class="contact-main">
@@ -109,6 +121,7 @@
     </article>
     <script src="../scripts/contacts/contacts.js"></script>
     <script src="../scripts/contacts/contact_dialog.js"></script>
+    <script src="../scripts/mainframe.js"></script>
 
 </body>
 
