fix: correct navigation links in sidebar

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -20,7 +20,7 @@
                 <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
             </section>
             <nav class="sidebar-nav">
-                <a href="#" class="sidebar-nav-section">
+                <a href="./summary.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                     <p>Summary</p>
                 </a>
@@ -32,7 +32,7 @@
                     <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
-                <a href="#" class="sidebar-nav-section">
+                <a href="./contacts.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
