--- a/html/summary.html
+++ b/html/summary.html
@@ -20,19 +20,19 @@
             <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
         </section>
         <nav class="sidebar-nav">
-            <a href="../html/summary.html" class="sidebar-nav-section current-selection">
+            <a href="./summary.html" class="sidebar-nav-section current-selection">
                 <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
                 <p>Summary</p>
             </a>
-            <a href="../html/add_task.html" class="sidebar-nav-section">
+            <a href="./add_task.html" class="sidebar-nav-section">
                 <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
                 <p>Add Task</p>
             </a>
-            <a href="../html/board.html" class="sidebar-nav-section">
+            <a href="./board.html" class="sidebar-nav-section">
                 <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                 <p>Board</p>
             </a>
-            <a href="../html/contacts.html" class="sidebar-nav-section">
+            <a href="./contacts.html" class="sidebar-nav-section">
                 <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                 <p>Contacts</p>
             </a>
