correction of grammar

--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -163,7 +163,7 @@
                 <p>Empfänger der Daten sind ggf. technische Dienstleister, die für den Betrieb und die Wartung
                     unserer Webseite als Auftragsverarbeiter tätig werden.</p>
                 <h4>Speicherdauer</h4>
-                <p>Daten werden spätestens Zwei Wochen nach Bearbeitung der Kontaktaufnahme
+                <p>Daten werden spätestens zwei Wochen nach Bearbeitung der Kontaktaufnahme
                     gelöscht.</p>
                 <p>Sofern es zu einem Vertragsverhältnis kommt, unterliegen wir den gesetzlichen
                     Aufbewahrungsfristen. Diese betragen grundsätzlich 6 oder 10 Jahre aus Gründen der
