--- a/html/contacts.html
+++ b/html/contacts.html
@@ -17,13 +17,6 @@
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
 
-    <script src="/script.js"></script>
-    <script src="/scripts/firebase.js"></script>
-    <script src="../scripts/contacts/contact_data.js"></script>
-    <script src="../scripts/contacts/contact_template.js"></script>
-    <script src="../scripts/board_overlay_data.js"></script>
-
-
 </head>
 
 <body onload="fetchContactList()" class="body">
@@ -119,9 +112,14 @@
             </dialog>
         </main>
     </article>
+    <script src="../scripts/firebase.js"></script>         
+    <script src="../script.js"></script>                 
+    <script src="../scripts/contacts/contact_data.js"></script>
+    <script src="../scripts/contacts/contact_template.js"></script>
+    <script src="../scripts/board_overlay_data.js"></script>
     <script src="../scripts/contacts/contacts.js"></script>
     <script src="../scripts/contacts/contact_dialog.js"></script>
-    <script src="../scripts/mainframe.js"></script>
+    <script src="../scripts/mainframe.js"></script>  
 
 </body>
 
