fix: added grey addTask svg as standard svg - changed color in class: sidebar-nav-section from white to grey
feat: added css class white to color writing in navbar when in on this site
- added said class to specific html file

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -46,8 +46,8 @@
                     <p>Board</p>
                 </a>
                 <a href="/html/contacts.html" class="sidebar-nav-section active">
-                    <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
-                    <p>Contacts</p>
+                    <img class="nav-icons" src="../assets/icons/sideBar/contact_white.svg" alt="Contacts icon">
+                    <p class="white">Contacts</p>
                 </a>
 
             </nav>
