fix: added stylesheet addTask_responsiv to contact.html

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../style/add_task.css">
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
+    <link rel="stylesheet" href="../style/add_task_responsive.css">
 
     <script src="/script.js"></script>
     <script src="/scripts/firebase.js"></script>
@@ -60,6 +61,7 @@
     <article>
         <header class="header">
             <nav class="header-nav">
+                <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
                     <a href="../html/help.html">
