--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -53,7 +53,7 @@
         </div>
         <footer class="sidebar-footer">
             <a href="../html/privacy_policy.html">Privacy Policy</a>
-            <a class="active" href="../html/legal_notice.html">Legal notice</a>
+            <a class="active disable" href="../html/legal_notice.html">Legal notice</a>
         </footer>
     </aside>
     <article>
