--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -50,7 +50,7 @@
             </nav>
         </div>
         <footer class="sidebar-footer">
-            <a class="active" href="../html/privacy_policy.html">Privacy Policy</a>
+            <a class="active disable" href="../html/privacy_policy.html">Privacy Policy</a>
             <a href="../html/legal_notice.html">Legal notice</a>
         </footer>
     </aside>
