feat: added css class for background color for sidebar when on sites help, policy and legal
fix: added container in those three sites so the links in the sidebar stay up even though rest of the content is scrollable

--- a/html/help.html
+++ b/html/help.html
@@ -24,34 +24,36 @@
 </head>
 
 <body class="body">
-    <aside class="sidebar">
-        <div class="sidebar_upper_section">
-            <section class="logo-section">
-                <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
-            </section>
-            <nav class="sidebar-nav">
-                <a href="#" class="sidebar-nav-section">
-                    <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
-                    <p>Summary</p>
-                </a>
-                <a href="/html/add_task.html" class="sidebar-nav-section">
-                    <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
-                    <p>Add Task</p>
-                </a>
-                <a href="/html/board.html" class="sidebar-nav-section">
-                    <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
-                    <p>Board</p>
-                </a>
-                <a href="/html/contacts.html" class="sidebar-nav-section">
-                    <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
-                    <p>Contacts</p>
-                </a>
-            </nav>
+    <aside class="background-color-height">
+        <div class="sidebar">
+            <div class="sidebar_upper_section">
+                <section class="logo-section">
+                    <img class="logo" src="../assets/icons/logo/logo_white.svg" alt="Join logo">
+                </section>
+                <nav class="sidebar-nav">
+                    <a href="#" class="sidebar-nav-section">
+                        <img class="nav-icons" src="../assets/icons/sideBar/summary.svg" alt="summary icon">
+                        <p>Summary</p>
+                    </a>
+                    <a href="/html/add_task.html" class="sidebar-nav-section">
+                        <img class="nav-icons" src="../assets/icons/sideBar/addTask.svg" alt="Add Task icon">
+                        <p>Add Task</p>
+                    </a>
+                    <a href="/html/board.html" class="sidebar-nav-section">
+                        <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
+                        <p>Board</p>
+                    </a>
+                    <a href="/html/contacts.html" class="sidebar-nav-section">
+                        <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
+                        <p>Contacts</p>
+                    </a>
+                </nav>
+            </div>
+            <footer class="sidebar-footer">
+                <a href="../html/privacy_policy.html">Privacy Policy</a>
+                <a href="../html/legal_notice.html">Legal notice</a>
+            </footer>
         </div>
-        <footer class="sidebar-footer">
-            <a href="../html/privacy_policy.html">Privacy Policy</a>
-            <a href="../html/legal_notice.html">Legal notice</a>
-        </footer>
     </aside>
     <article>
         <header class="header">
@@ -71,8 +73,8 @@
             <section id="contactsMainElement" class="contact-display help-content">
                 <div class="help-header">
                     <h1>Help</h1>
-                    <button onclick="redirectBack()" class="go-back-btn display-in-wide"><img src="../assets/icons/contacts/go_back.svg"
-                            alt="go back to source site"></button>
+                    <button onclick="redirectBack()" class="go-back-btn display-in-wide"><img
+                            src="../assets/icons/contacts/go_back.svg" alt="go back to source site"></button>
                 </div>
                 <p>Welcome to the help page for <a href="#">Join</a>, your guide to using our kanban project management
                     tool. Here,
@@ -152,12 +154,12 @@
                     </li>
                 </ol>
                 <p> Remember that using <a href="#">Join</a> effectively requires consistent updates from you and
-                        your team to
-                        ensure the board reflects the current state of your project.
-                        Have more questions about <a href="#">Join</a>? Feel free to contact us at fabianpuchta@hotmail.de.
-                        We're here to help
-                        you!
-                    </p>
+                    your team to
+                    ensure the board reflects the current state of your project.
+                    Have more questions about <a href="#">Join</a>? Feel free to contact us at fabianpuchta@hotmail.de.
+                    We're here to help
+                    you!
+                </p>
                 <h2 class="margin-top">Enjoy using Join!</h2>
             </section>
         </main>
