--- a/html/contacts.html
+++ b/html/contacts.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../style/add_task.css">
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
-    <link rel="stylesheet" href="../style/.css">
+    <link rel="stylesheet" href="../style/add_task_responsive.css">
 
     <script src="/script.js"></script>
     <script src="/scripts/firebase.js"></script>
