chore: apply feature summary code on clean branch

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -66,13 +66,25 @@
                 <img src="../assets/icons/logo/logoBig.svg" alt="join logo" class="logo-responsive">
                 <p>Kanban Project Management Tool</p>
                 <section class="header-side-buttons">
-                    <a href="../html/help.html">
-                        <img src="../assets/icons/header/help.svg" alt="help icon">
-                    </a>
-                    <a href="#">
-                        <img src="../assets/icons/header/user_placeholder.svg" alt="user icon">
-                    </a>
-                </section>
+    <a href="#">
+        <img src="../assets/icons/header/help.svg" alt="help icon">
+    </a>
+    <button type="button" class="avatar-wrapper" id="avatar-button">
+        <div id="header-avatar" class="header-avatar"></div>
+    </button>
+
+    <div id="avatar-menu" class="avatar-menu hidden">
+        <button type="button" class="avatar-menu-item" id="menu-legal">
+            Legal Notice
+        </button>
+        <button type="button" class="avatar-menu-item" id="menu-privacy">
+            Privacy Policy
+        </button>
+        <button type="button" class="avatar-menu-item" id="menu-logout">
+            Log out
+        </button>
+    </div>
+</section>
             </nav>
         </header>
         <main class="main-content">
@@ -198,6 +210,8 @@
         </main>
     </article>
     <script src="../scripts/firebase.js"></script>
+    <script src="../scripts/firebase_auth.js"></script>
+    <script src="../scripts/firebase_tasks.js"></script>
     <script src="../scripts/add_task_templates.js"></script>
     <script src="../scripts/add_task.js"></script>
 </body>
