--- a/html/contacts.html
+++ b/html/contacts.html
@@ -107,6 +107,13 @@
             </dialog>
         </main>
     </article>
+    <script src="../scripts/firebase.js"></script>
+    <script src="../scripts/firebase_auth.js"></script>
+    <script src="../scripts/firebase_tasks.js"></script>         
+    <script src="../script.js"></script>                 
+    <script src="../scripts/contacts/contact_data.js"></script>
+    <script src="../scripts/contacts/contact_template.js"></script>
+    <script src="../scripts/board_overlay_data.js"></script>
     <script src="../scripts/contacts/contacts.js"></script>
     <script src="../scripts/contacts/contact_dialog.js"></script>
 
