--- a/html/board.html
+++ b/html/board.html
@@ -47,13 +47,25 @@
         <header class="header">
             <nav class="header-nav">
                 <p>Kanban Project Management Tool</p>
-                <section class="header-side-buttons">
-                    <a href="../html/help.html">
+                <section class="header-side-buttons" id="current_user_id">
+                    <a href="#">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
-                    <a href="#">
-                        <img src="../assets/icons/header/user_placeholder.svg" alt="user icon">
-                    </a>
+                    <button type="button" class="avatar-wrapper" id="avatar-button">
+                        <div id="header-avatar" class="header-avatar"></div>
+                    </button>
+
+                    <div id="avatar-menu" class="avatar-menu hidden">
+                        <button type="button" class="avatar-menu-item" id="menu-legal">
+                            Legal Notice
+                        </button>
+                        <button type="button" class="avatar-menu-item" id="menu-privacy">
+                            Privacy Policy
+                        </button>
+                        <button type="button" class="avatar-menu-item" id="menu-logout">
+                            Log out
+                        </button>
+                    </div>
                 </section>
             </nav>
         </header>
@@ -114,6 +126,8 @@
     </article>
 
     <script src="../scripts/firebase.js"></script>
+    <script src="../scripts/firebase_auth.js"></script>
+    <script src="../scripts/firebase_tasks.js"></script>
     <script src="../scripts/add_task.js"></script>
     <script src="../scripts/contacts/contact_data.js"></script>
     <script src="../script.js"></script>
@@ -126,7 +140,5 @@
     <script src="../scripts/edit_and_add_task_overlay.js"></script>
     <script src="../scripts/board_overlay_data.js"></script>
 </body>
-
-
 
 </html>
