fixed issues by copilot

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -26,7 +26,7 @@
                 </a>
                 <a href="./add_task.html" class="sidebar-nav-section current-selection">
                     <img class="nav-icons" src="../assets/icons/sideBar/addTask_white.svg" alt="Add Task icon">
-                    <p class="white">Add Task</p>
+                    <p class="white-writing">Add Task</p>
                 </a>
                 <a href="./board.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
