--- a/html/contacts.html
+++ b/html/contacts.html
@@ -48,7 +48,7 @@
                 </a>
                 <a href="/html/contacts.html" class="sidebar-nav-section active">
                     <img class="nav-icons" src="../assets/icons/sideBar/contact_white.svg" alt="Contacts icon">
-                    <p class="white">Contacts</p>
+                    <p class="white-writing">Contacts</p>
                 </a>
 
             </nav>
