--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="body">
-    <aside class="background-color-height">
+    <aside class="sidebar-background-color">
         <div class="sidebar">
             <div class="sidebar_upper_section">
                 <section class="logo-section">
