feat: added links to other html sites

--- a/html/summary.html
+++ b/html/summary.html
@@ -32,7 +32,7 @@
                     <img class="nav-icons" src="../assets/icons/sideBar/board.svg" alt="Board icon">
                     <p>Board</p>
                 </a>
-                <a href="#" class="sidebar-nav-section">
+                <a href="../html/contacts.html" class="sidebar-nav-section">
                     <img class="nav-icons" src="../assets/icons/sideBar/contacts.svg" alt="Contacts icon">
                     <p>Contacts</p>
                 </a>
