fix: adjusted file paths to js files

--- a/html/login.html
+++ b/html/login.html
@@ -65,7 +65,7 @@
     </div>
 
     <script src="../scripts/firebase.js"></script>
-    <script src="../scripts/login.js" defer></script>
+    <script src="../scripts/login_and_summary/login.js" defer></script>
 
 </body>
 
