--- a/html/signup.html
+++ b/html/signup.html
@@ -83,7 +83,7 @@
     </div>
 
     <script src="../scripts/firebase.js"></script>
-    <script src="../scripts/signup.js" defer></script>
+    <script src="../scripts/login_and_summary/signup.js" defer></script>
 </body>
 
 </html>
