--- a/html/login.html
+++ b/html/login.html
@@ -32,12 +32,12 @@
                 <form class="login-form" id="login-form" novalidate>
 
                     <div class="input-wrapper">
-                        <input type="email" id="login-email" class="login-input" placeholder="Email" required>
+                        <input autocomplete="username" type="email" id="login-email" class="login-input" placeholder="Email" required>
                         <img src="../assets/icons/contacts/mail.svg" alt="Email icon" class="input-icon">
                     </div>
 
                     <div class="input-wrapper">
-                        <input type="password" id="login-password" class="login-input" placeholder="Password" required>
+                        <input autocomplete="current-password" type="password" id="login-password" class="login-input" placeholder="Password" required>
                         <img src="../assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
                     </div>
 
