feat: added autocomplete attributes to signup html

--- a/html/signup.html
+++ b/html/signup.html
@@ -45,19 +45,19 @@
                 </div>
 
                 <div class="input-wrapper">
-                    <input type="email" id="signup-email" class="login-input" placeholder="Email" required>
+                    <input autocomplete="username" type="email" id="signup-email" class="login-input" placeholder="Email" required>
                     <img src="../assets/icons/contacts/mail.svg" alt="Email icon" class="input-icon">
                     <span class="input-error" id="error-signup-email"></span>
                 </div>
 
                 <div class="input-wrapper">
-                    <input type="password" id="signup-password" class="login-input" placeholder="Password" required>
+                    <input autocomplete="current-password" type="password" id="signup-password" class="login-input" placeholder="Password" required>
                     <img src="../assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
                     <span class="input-error" id="error-signup-password"></span>
                 </div>
 
                 <div class="input-wrapper">
-                    <input type="password" id="signup-password-confirm" class="login-input"
+                    <input autocomplete="current-password" type="password" id="signup-password-confirm" class="login-input"
                         placeholder="Confirm Password" required>
                     <img src="../assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
                     <span class="input-error" id="error-signup-password-confirm"></span>
