feat: changed structure to onclick instead of event listener
fix: usecase of function and trimming down structure

--- a/html/login.html
+++ b/html/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../style/summary_login/login_responsive.css">
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 
-    
+
 </head>
 
 <body class="body">
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="login-buttons">
-                        <button type="submit" class="login-button-primary" id="login-btn">
+                        <button onclick="onGuestClick()" type="submit" class="login-button-primary" id="login-btn">
                             Log in
                         </button>
 
