--- a/html/login.html
+++ b/html/login.html
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="login-buttons">
-                        <button onclick="onGuestClick()" type="submit" class="login-button-primary" id="login-btn">
+                        <button type="submit" class="login-button-primary" id="login-btn">
                             Log in
                         </button>
 
