fix: replaced loadAllUsers with fetchAllDataGlobal to prevent doubling functions
changed destination when successfully signing up from summary.html to login.html

--- a/html/login.html
+++ b/html/login.html
@@ -37,7 +37,7 @@
                         <img src="../assets/icons/login/lock.svg" alt="Lock icon" class="input-icon">
                     </div>
                     <div class="login-buttons">
-                        <button onclick="onGuestClick()" type="submit" class="login-button-primary" id="login-btn">
+                        <button type="submit" class="login-button-primary" id="login-btn">
                             Log in
                         </button>
                         <button type="button" class="login-button-secondary guest-button" id="guest-login-btn">
