feat: added login.js to signup html
fix: adjusted data path in loadOrCreateGuest and  findUserByEmail function

refactor: commented out lines of code to test if their getting used

--- a/html/signup.html
+++ b/html/signup.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../style/summary_login/signup_responsive.css">
     <link rel="stylesheet" href="../style/summary_login/signup.css">
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
+    
 
 </head>
 
@@ -83,6 +84,7 @@
     </div>
 
     <script src="../scripts/firebase.js"></script>
+    <script src="../scripts/login_and_summary/login.js"></script>
     <script src="../scripts/login_and_summary/signup.js" defer></script>
 </body>
 
