--- a/html/summary.html
+++ b/html/summary.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/summary_login/summary.css">
     <link rel="stylesheet" href="../style/summary_login/summary_responsive.css">
+
+   
+
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 
     <script src="../scripts/login_and_summary/login.js"></script>
@@ -54,10 +57,23 @@
                     <a href="../html/help.html">
                         <img src="../assets/icons/header/help.svg" alt="help icon">
                     </a>
-                    <a href="#">
-                        <img src="../assets/icons/header/user_placeholder.svg" alt="user icon">
-                    </a>
+                    <button type="button" class="avatar-wrapper" id="avatar-button">
+                        <div id="header-avatar" class="header-avatar"></div>
+                    </button>
+
+                    <div id="avatar-menu" class="avatar-menu hidden">
+                        <button type="button" class="avatar-menu-item" id="menu-legal">
+                            Legal Notice
+                        </button>
+                        <button type="button" class="avatar-menu-item" id="menu-privacy">
+                            Privacy Policy
+                        </button>
+                        <button type="button" class="avatar-menu-item" id="menu-logout">
+                            Log out
+                        </button>
+                    </div>
                 </section>
+            </nav>
             </nav>
         </header>
         <main class="main-content">
