--- a/html/summary.html
+++ b/html/summary.html
@@ -11,14 +11,15 @@
     <link rel="stylesheet" href="../style/summary_login/summary.css">
     <link rel="stylesheet" href="../style/summary_login/summary_responsive.css">
 
-   
-
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 
     <script src="../scripts/login_and_summary/login.js"></script>
+    <script src="../scripts/firebase.js"></script>
+    <script src="../scripts/login_and_summary/avatar.js"></script>
+    <script src="../scripts/login_and_summary/summary.js"></script>
 </head>
 
-<body class="body">
+<body onload="getCurrentUserSafe()" class="body">
     <aside class="sidebar">
         <div class="sidebar_upper_section">
             <section class="logo-section">
@@ -163,5 +164,7 @@
     </article>
 
 </body>
+
+
 
 </html>
