fix: changed source of data to be inline

--- a/html/summary.html
+++ b/html/summary.html
@@ -19,7 +19,7 @@
     <script src="../scripts/login_and_summary/summary.js"></script>
 </head>
 
-<body onload="getCurrentUserSafe()" class="body">
+<body class="body">
     <aside class="sidebar">
         <div class="sidebar_upper_section">
             <section class="logo-section">
