feat: added stylesheets to summary html to prevent multiple css classes with the same content
fix: added color to contact sub to be inline with figma
- deleted multiple css classes in summary.css to downsize code lines

--- a/html/summary.html
+++ b/html/summary.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="../style/mainframe_responsive.css">
     <link rel="stylesheet" href="../style/summary_login/summary.css">
     <link rel="stylesheet" href="../style/summary_login/summary_responsive.css">
+    <link rel="stylesheet" href="../style/add_task.css">
+    <link rel="stylesheet" href="../style/contacts/contacts.css">
+    <link rel="stylesheet" href="../style/contacts/contact_responsive.css">
 
     <link rel="shortcut icon" href="../assets/icons/logo/logoSmall.svg">
 
@@ -82,13 +85,11 @@
                 <p class="greeting-overlay-text">Good morning,</p>
                 <h2 class="greeting-overlay-name"></h2>
             </div>
-
-            <section class="summary-title-wrapper">
-                <h1 class="summary-title">Join 360</h1>
-                <div class="summary-title-divider"></div>
-                <p class="summary-subtext">Key Metrics at a Glance</p>
-            </section>
-
+            <div class="contact-header-text summary-padding-top">
+                <h1 class="h1">Join 360</h1>
+                <div class="separator-vertical"></div>
+                <span class="contact-sub">Key Metrics at a Glance</span>
+            </div>
             <div class="summary-content-layout">
 
                 <section class="summary-cards-wrapper">
