--- a/html/summary.html
+++ b/html/summary.html
@@ -95,14 +95,14 @@
                 <section class="summary-cards-wrapper">
 
                     <div class="summary-row summary-row-top">
-                        <div class="summary-card todo-card summary-container-height">
+                        <div class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
                             <img class="todo-icon" src="../assets/icons/summary/toDo.svg" alt="To-Do icon">
                             <div class="todo-info">
                                 <div class="todo-number">0</div>
                                 <div class="todo-label">To-Do</div>
                             </div>
                         </div>
-                        <div class="summary-card done-card summary-container-height">
+                        <div class="summary-card summary-cards-first-row summary-container-height padding-all-cards">
                             <img class="done-icon" src="../assets/icons/summary/done.svg" alt="Done icon">
                             <div class="done-info">
                                 <div class="done-number">0</div>
@@ -112,7 +112,7 @@
                     </div>
 
                     <div class="summary-row summary-row-urgent">
-                        <div class="urgent-card summary-container-height">
+                        <div class="urgent-card summary-container-height padding-all-cards">
                             <div class="urgent-left">
                                 <div class="urgent-icon-wrapper">
                                     <img class="urgent-icon" src="../assets/icons/summary/urgent.svg" alt="Urgent icon">
@@ -137,19 +137,19 @@
             </div>
             <section class="summary-stats-bottom">
                 <div class="summary-row summary-row-stats">
-                    <div class="summary-stat-card board-card summary-container-height">
+                    <div class="summary-stat-card board-card summary-container-height padding-all-cards">
                         <div class="board-info">
                             <div class="board-number">0</div>
                             <div class="board-label">Tasks in Board</div>
                         </div>
                     </div>
-                    <div class="summary-stat-card progress-card summary-container-height">
+                    <div class="summary-stat-card progress-card summary-container-height padding-all-cards">
                         <div class="progress-info">
                             <div class="progress-number">0</div>
                             <div class="progress-label">Tasks in Progress</div>
                         </div>
                     </div>
-                    <div class="summary-stat-card feedback-card summary-container-height">
+                    <div class="summary-stat-card feedback-card summary-container-height padding-all-cards">
                         <div class="feedback-info">
                             <div class="feedback-number">0</div>
                             <div class="feedback-label">Awaiting Feedback</div>
