fix: adjusted padding

--- a/html/summary.html
+++ b/html/summary.html
@@ -137,19 +137,19 @@
             </div>
             <section class="summary-stats-bottom">
                 <div class="summary-row summary-row-stats">
-                    <div class="summary-stat-card board-card summary-container-height padding-all-cards">
+                    <div class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                         <div class="board-info">
                             <div class="board-number">0</div>
                             <div class="board-label">Tasks in Board</div>
                         </div>
                     </div>
-                    <div class="summary-stat-card progress-card summary-container-height padding-all-cards">
+                    <div class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                         <div class="progress-info">
                             <div class="progress-number">0</div>
                             <div class="progress-label">Tasks in Progress</div>
                         </div>
                     </div>
-                    <div class="summary-stat-card feedback-card summary-container-height padding-all-cards">
+                    <div class="summary-stat-card summary-cards-last-row summary-container-height padding-all-cards">
                         <div class="feedback-info">
                             <div class="feedback-number">0</div>
                             <div class="feedback-label">Awaiting Feedback</div>
